--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ADMIN-04C0QNBGE\\NHATNAM2112;Database=OJTDB;User Id=sa;Password=nhatnam2112;TrustServerCertificate=True;"
+  }
 }
