--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ADMIN-04C0QNBGE\\NHATNAM2112;Database=OJTDB;User Id=sa;Password=nhatnam2112;TrustServerCertificate=True;"
+    "ConnectedDb": "Data Source=ADMIN-04C0QNBGE\\NHATNAM2112;Initial Catalog=OJTDB;Integrated Security=True;Trust Server Certificate=True"
   }
 }
