--- a/PHA.csproj
+++ b/PHA.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Home\" />
+    <Folder Include="Views\Login\" />
     <Folder Include="Views\Shared\" />
   </ItemGroup>
 
