--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectedDb": "Data Source=ADMIN-04C0QNBGE\\NHATNAM2112;Initial Catalog=OJTDB;Integrated Security=True;Trust Server Certificate=True"
+    "ConnectedDb": "Data Source=ADMIN-04C0QNBGE\\NHATNAM2112;Initial Catalog=FUT;Integrated Security=True;Trust Server Certificate=True"
   }
 }
